--- a/styles/styles.css
+++ b/styles/styles.css
@@ -24,8 +24,47 @@
 
 body {
     font-family: "Rubik", sans-serif;
+    font-weight: 400;
     font-size: 18px;
     line-height: 30px;
     color: #444444;
     background-color: #FFFFFF;
 }
+
+/* Начало стилизации шапки сайта */
+
+.page-header {
+    color: #000000;
+    background-color: #FFE17F;
+}
+
+.search-button {
+    font-family: "Rubik", sans-serif;
+    font-size: 16px;
+    line-height: 20px;
+    color: #000000;
+}
+
+.navigation-link {
+    color: #000000;
+    background-color: #FFE17F;
+    text-align: center;
+    text-decoration: none;
+}
+
+.navigation-shop {
+    font-family: "Raleway", sans-serif;
+    line-height: 21px;
+    text-transform: uppercase;
+    letter-spacing: 0.2em;
+}
+
+.navigation-catalog-item {
+    font-family: "Rubik", sans-serif;
+    font-size: 16px;
+    line-height: 18px;
+    text-transform: capitalize;
+    letter-spacing: normal;
+}
+
+/* Конец стилизации шапки сайта */
