--- a/styles/styles.css
+++ b/styles/styles.css
@@ -38,7 +38,6 @@ body {
     line-height: 21px;
     color: #000000;
     text-transform: uppercase;
-    letter-spacing: 0.2em;
     text-align: center;
 }
 
@@ -93,6 +92,7 @@ body {
 .slider-product-link {
     background-color: #FFFFFF;
     text-decoration: none;
+	letter-spacing: 0.2em;
 }
 
 .slider-product-characteristic {
@@ -131,5 +131,19 @@ body {
 }
 
 .advantages-button {
+    background-color: #F0F0F0;
+	letter-spacing: 0.2em;
+}
+
+/* Стилизация блока доставки редких товаров */
+
+.delivery-to-order {
+    background-color: #F0F0F0;
+}
+
+.delivery-to-order-button {
+    font-size: 20px;
+    line-height: 23px;
+    letter-spacing: 0.2em;
     background-color: #F0F0F0;
 }
