--- a/styles/styles.css
+++ b/styles/styles.css
@@ -40,6 +40,7 @@ body {
     text-transform: uppercase;
     text-align: center;
     text-decoration: none;
+    letter-spacing: 0.2em;
 }
 
 .title {
@@ -50,7 +51,7 @@ body {
     color: #000000;
 }
 
-/* Стилизация шапки сайта */
+/* Стилизация хедера сайта */
 
 .page-header {
     color: #000000;
@@ -64,6 +65,7 @@ body {
     line-height: 20px;
     color: #000000;
     background-color: #FFE17F;
+    letter-spacing: normal;
 }
 
 .navigation-link {
@@ -77,7 +79,6 @@ body {
     font-family: "Raleway", sans-serif;
     line-height: 21px;
     text-transform: uppercase;
-    letter-spacing: 0.2em;
 }
 
 .navigation-catalog-item {
@@ -101,7 +102,6 @@ body {
 .slider-product-link {
     background-color: #FFFFFF;
     text-decoration: none;
-	letter-spacing: 0.2em;
 }
 
 .slider-product-characteristic {
@@ -133,7 +133,6 @@ body {
 
 .advantages-button {
     background-color: #F0F0F0;
-	letter-spacing: 0.2em;
 }
 
 /* Стилизация блока доставки редких товаров */
@@ -145,7 +144,6 @@ body {
 .delivery-to-order-button {
     font-size: 20px;
     line-height: 23px;
-    letter-spacing: 0.2em;
     background-color: #F0F0F0;
 }
 
@@ -159,7 +157,6 @@ body {
 
 .about-us-link {
     background-color: #FFFFFF;
-    letter-spacing: 0.2em;
 }
 
 /* Стилизация блока контакты */
@@ -178,10 +175,6 @@ body {
     font-style: normal;
 }
 
-.contacts-link {
-    letter-spacing: 0.2em;
-}
-
 /* Стилизация блока подписки на рассылку */
 
 .subscribe {
@@ -198,5 +191,26 @@ body {
 
 .subscribe-button {
     background-color: #F0F0F0;
-    letter-spacing: 0.2em;
+}
+
+/* Стилизация футера сайта */
+
+.page-footer {
+    color: #FFFFFF;
+    background-color: #444444;
+}
+
+.footer-contacts-address {
+    font-size: 16px;
+    line-height: 20px;
+}
+
+.footer-navigation-link {
+    color: #FFFFFF;
+}
+
+.footer-phone-number {
+    font-size: 16px;
+    line-height: 20px;
+    color: #FFFFFF;
 }
