--- a/styles/styles.css
+++ b/styles/styles.css
@@ -277,6 +277,28 @@ body {
     text-align: right;
 }
 
+/* Стилизация пагинации каталога */
+
+.load-more-button {
+    font-size: 16px;
+    line-height: 19px;
+    background-color:#FFFFFF;
+}
+
+.pagination {
+    background-color: #F0F0F0;
+}
+
+.pagination-link {
+    text-decoration: none;
+}
+
+.pagination-link-page {
+    font-size: 16px;
+    line-height: 20px;
+    text-align: center;
+}
+
 /* Стилизация футера сайта */
 
 .page-footer {
