--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,7 +22,15 @@
     font-display: swap;
 }
 
+html {
+    height: 100%;
+}
+
 body {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    min-height: 100%;
     font-family: "Rubik", sans-serif;
     font-weight: 400;
     font-size: 18px;
@@ -98,6 +106,10 @@ body {
 }
 
 /* Стилизация главной страницы сайта */
+
+.main-container {
+    flex-grow: 1;
+}
 
 /* Стилизация слайдера */
 
