--- a/styles/styles.css
+++ b/styles/styles.css
@@ -171,6 +171,16 @@ body {
 
 /* Стилизация блока категорий товаров */
 
+.categories {
+    width: 1160px;
+    margin: 0 auto;
+}
+
+.categories-list {
+    margin: 0;
+    padding: 0;
+}
+
 .categories-item {
     font-family: "Raleway", sans-serif;
     font-weight: 800;
@@ -183,7 +193,23 @@ body {
 /* Стилизация блока преимуществ */
 
 .advantages {
+    width: 1440px;
     background-color: #F0F0F0;
+}
+
+.advantages-wrapper {
+    width: 1160px;
+    margin: 0 auto;
+}
+
+.advantages-list {
+    margin: 0;
+    padding: 0;
+}
+
+.advantages-item {
+    display: flex;
+    flex-direction: row-reverse;
 }
 
 .advantages-button {
